# mlir-python-extras

./: .gitignore  MANIFEST.in  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: release.yml  sdist.yml  test.yml  test_pypi.yml  wheels.yml
examples/: att.json  att.txt  chip.py  cuda_e2e.ipynb  cuda_matmul_opt.py  demo.py  flash_attention.py  ir_c_demo.py  liveness_analysis.py  mlir_python_extras.ipynb  mlir_python_utils.ipynb  mwe.py  rdna_matmul_opt.py  requirements.txt  rocprof.sh  schedule_barriers.py  throwaway.py  util.py  vectorization_e2e.ipynb
mlir/extras/: __init__.py  context.py  meta.py  types.py  util.py
mlir/extras/ast/: canonicalize.py  py_type.py  util.py
mlir/extras/dialects/ext/: _shaped_value.py  affine.py  arith.py  bufferization.py  cf.py  func.py  gpu.py  linalg.py  llvm.py  memref.py  nvgpu.py  rocdl.py  scf.py  tensor.py  transform.py  vector.py
mlir/extras/runtime/: passes.py  refbackend.py
mlir/extras/testing/: testing.py
mlir/extras/util/: __init__.py  liveness.py  util.py
mlir/utils/: context.py  meta.py  util.py
mlir/utils/_configuration/: generate_pass_pipeline.py  generate_trampolines.py  util.py
mlir/utils/ast/: canonicalize.py
mlir/utils/runtime/: passes.py  refbackend.py
mlir/utils/testing/: testing.py
mlir_utils/: __init__.py  configuration.py  context.py  meta.py  types.py  util.py
mlir_utils/__configuration/: __init__.py  __main__.py  _module_alias_map.py  configuration.py
mlir_utils/_configuration/: .gitignore  __init__.py  __main__.py  configuration.py  generate_pass_pipeline.py  generate_trampolines.py  module_alias_map.py
mlir_utils/ast/: canonicalize.py  util.py
mlir_utils/ctypesgen/: .gitignore  generate.py  mlir_capi.py
mlir_utils/dialects/: .gitignore  generate_trampolines.py  util.py
mlir_utils/dialects/ext/: arith.py  func.py  gpu.py  gpu_enums.py  linalg.py  memref.py  nvgpu.py  scf.py  tensor.py  transform.py
mlir_utils/runtime/: passes.py  refbackend.py
mlir_utils/testing/: generate_test_checks.py  testing.py
scripts/: generate_pass_pipeline.py  generate_trampolines.py  get_latest_bindings.py  get_latest_gpu_bindings.py  lift_mlir_to_python.py  util.py
tests/: conftest.py  llvm.mlir  test_arith.py  test_async.py  test_func.py  test_gpu.py  test_linalg.py  test_llvm.py  test_location_tracking.py  test_memref.py  test_nvgpu_nvvm.py  test_operator_overloading.py  test_other_hosts.py  test_pipeline.py  test_regions.py  test_runtime.py  test_scf.py  test_smoke.py  test_tensor.py  test_transform.py  test_transformers.py  test_types.py  test_value_caster.py  test_vector.py  util.py
(+14 files in other folders)
