[project]
name = "mlir-python-utils"
version = "0.0.2"
description = "The missing pieces (as far as boilerplate reduction goes) of the upstream MLIR python bindings."
requires-python = ">=3.11"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "numpy",
    "black",
    "PyYAML",
    "inflection",
]

[project.optional-dependencies]
torch-mlir-test = ["pytest", "torch-mlir-core", "mlir-native-tools"]
mlir-test = ["pytest", "mlir-python-bindings", "mlir-native-tools"]
mlir = ["mlir-python-bindings"]

[project.scripts]
configure-mlir-python-utils = "mlir_utils:_configuration.configuration.configure_host_bindings"
generate-trampolines = "mlir_utils:_configuration.generate_trampolines.generate_trampolines"

[build-system]
# https://stackoverflow.com/a/69711730
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mlir_utils", "mlir_utils.*"]  # alternatively: `exclude = ["additional*"]`