[project]
name = "mlir-python-utils"
version = "0.0.3"
description = "The missing pieces (as far as boilerplate reduction goes) of the upstream MLIR python bindings."
requires-python = ">=3.11"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "numpy",
    "black",
    "PyYAML",
    "inflection",
    "bytecode",
    "libcst",
]

[project.optional-dependencies]
test = ["pytest", "mlir-native-tools", "astpretty"]
torch-mlir = ["torch-mlir-core"]
jax = ["jax[cpu]", ]
mlir = ["mlir-python-bindings"]

[project.scripts]
configure-mlir-python-utils = "mlir_utils:_configuration.configuration.configure_host_bindings"
generate-trampolines = "mlir_utils:_configuration.generate_trampolines.generate_trampolines"

[build-system]
# https://stackoverflow.com/a/69711730
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mlir_utils", "mlir_utils.*"]  # alternatively: `exclude = ["additional*"]`

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "[%(filename)s:%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"