[build-system]
# https://stackoverflow.com/a/69711730
#requires = ["setuptools>=64.0.0", "wheel", "pip"]
requires = ["setuptools>=42", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "[%(filename)s:%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
